--- a/app/src/main/res/layout/dialogbox.xml
+++ b/app/src/main/res/layout/dialogbox.xml
@@ -1,40 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:padding="10dp" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <TextView
+        android:id="@+id/dialogboxTitle"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="59dp"
+        android:background="@android:color/holo_blue_light"
+        android:gravity="center_horizontal|center_vertical"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="Dialogbox Title"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Type Your Message : "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            app:layout_constraintBottom_toTopOf="@+id/editTextDialogUserInput"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="26dp" />
+    <EditText
+        android:id="@+id/input1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="4dp"
+        android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/editTextDialogUserInput"
-            android:layout_width="345dp"
-            android:layout_height="41dp"
-            android:layout_marginBottom="68dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="26dp">
-
-            <requestFocus />
-
-        </EditText>
-    </android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/input2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:inputType="textPassword" />
 
 </LinearLayout>
