--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,16 +28,16 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout_Profile"
-                android:layout_width="391dp"
+                android:layout_width="wrap_content"
                 android:layout_height="300dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="520dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -58,6 +58,8 @@
                     android:layout_height="120dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="80dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="17dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -85,11 +87,14 @@
 
 
                 <TextView
-                    android:id="@+id/username"
+                    android:id="@+id/profileUsername"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="104dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:gravity="center"
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -99,7 +104,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView3"
-                    app:layout_constraintVertical_bias="0.42000002" />
+                    app:layout_constraintVertical_bias="0.405" />
 
             </android.support.constraint.ConstraintLayout>
 
