--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,38 +14,24 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout6"
-            android:layout_width="409dp"
+            android:layout_width="match_parent"
             android:layout_height="153dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/lessonplan_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_weight="100"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/welcome_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="8dp"
-                android:text="Welcome back,"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.53"
-                app:layout_constraintStart_toEndOf="@+id/welcome_image"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
                 android:id="@+id/welcome_name"
-                android:layout_width="205dp"
-                android:layout_height="41dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="32dp"
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="30sp"
@@ -54,21 +40,25 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.541"
+                app:layout_constraintHorizontal_weight="60"
                 app:layout_constraintStart_toEndOf="@+id/welcome_image"
-                app:layout_constraintTop_toBottomOf="@+id/welcome_label"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/welcome_image"
-                android:layout_width="104dp"
-                android:layout_height="107dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/welcome_name"
+                app:layout_constraintHeight_percent="80"
+                app:layout_constraintHorizontal_weight="20"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.266"
+                app:layout_constraintVertical_bias="0.111"
                 tools:src="@tools:sample/avatars" />
         </android.support.constraint.ConstraintLayout>
 
