--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -35,11 +35,21 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/item_detail"
+            android:id="@+id/item_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_title"
             android:layout_toRightOf="@+id/item_image" />
+
+        <TextView
+            android:id="@+id/item_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/item_age"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/item_age"
+            android:text="TextView" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
