--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintTop_toTopOf="@id/constraintLayout3">
 
         <android.support.constraint.ConstraintLayout
@@ -17,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="153dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/lessonplan_container"
+            android:background="@drawable/rounded_corner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_weight="100"
@@ -32,6 +34,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="32dp"
+                android:gravity="center_vertical"
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="30sp"
@@ -67,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:paddingLeft="20dp"
+            android:gravity="center_horizontal"
             android:paddingRight="20dp"
             android:text="Level 1"
             android:textColor="@android:color/black"
@@ -77,10 +80,10 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/horrecyclerView"
-            android:layout_width="405dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +93,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/horrecyclerView2"
-            android:layout_width="405dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingRight="20dp"
@@ -106,9 +109,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:paddingLeft="20dp"
+            android:gravity="center_horizontal"
             android:paddingRight="20dp"
-            android:text="Level 2"
+            android:text="← Level 2 →"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@+id/horrecyclerView"
