--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -8,59 +8,69 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="590dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center|top">
 
-        <TextView
-            android:id="@+id/text_label"
-            android:layout_width="329dp"
-            android:layout_height="76dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/rounded_corner"
-            android:gravity="center"
-            android:text="Interesting Fact"
-            android:textColor="@color/white"
-            android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/image_howto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_content"
-            android:layout_width="395dp"
-            android:layout_height="195dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="TextView"
-            app:autoSizeMaxTextSize="38dp"
-            app:autoSizeTextType="uniform"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:gravity="center_horizontal|top"
+            android:orientation="vertical"
+            android:weightSum="100"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/image_howto"
-            android:layout_width="341dp"
-            android:layout_height="256dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/text_content"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/text_label"
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="10"
+                android:background="@drawable/rounded_corner"
+                android:gravity="center"
+                android:text="Interesting Fact"
+                android:textColor="@color/white"
+                android:textSize="36sp" />
+
+            <ImageView
+                android:id="@+id/image_howto"
+                android:layout_width="match_parent"
+                android:layout_height="232dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="16dp"
+                android:layout_weight="20"
+                tools:src="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/text_content"
+                android:layout_width="match_parent"
+                android:layout_height="195dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:layout_weight="20"
+                android:text="TextView"
+                app:autoSizeMaxTextSize="38dp"
+                app:autoSizeTextType="uniform" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="61dp"
+                android:layout_weight="20" />
+        </LinearLayout>
+
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
