--- a/app/src/main/res/layout/horlayout_listitem.xml
+++ b/app/src/main/res/layout/horlayout_listitem.xml
@@ -9,21 +9,21 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/rounded_corner"
-        app:cardBackgroundColor="#468FF5"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="10dp"
         app:cardElevation="3dp"
         app:cardMaxElevation="2dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_corner">
 
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="91dp"
+                android:layout_height="88dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
@@ -46,13 +46,10 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="54dp"
                 android:layout_marginBottom="15dp"
-                android:autoSizeMaxTextSize="20sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeTextType="uniform"
                 android:gravity="center|center_vertical"
-                android:textColor="#000"
-                android:visibility="visible"
-                app:autoSizeTextType="uniform" />
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:visibility="visible" />
 
         </RelativeLayout>
 
