--- a/app/src/main/res/layout/fulllesson_view.xml
+++ b/app/src/main/res/layout/fulllesson_view.xml
@@ -45,14 +45,11 @@
             android:id="@+id/txt_lesson_title"
             android:layout_width="268dp"
             android:layout_height="46dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
-            android:foregroundGravity="center_vertical"
-            android:gravity="center|center_vertical"
+            android:gravity="center|center_horizontal|center_vertical"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="Title"
@@ -60,39 +57,24 @@
             android:textSize="50sp"
             app:autoSizeTextType="uniform"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_arrow_left"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btn_arrow_right"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/arrow_right"
-            android:foregroundGravity="center_vertical"
-            android:gravity="center|center_vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_arrow_left"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/arrow_left"
-            android:foregroundGravity="center_vertical"
-            android:gravity="center|center_vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_arrow_right"
-            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/swipe"
+        android:layout_width="174dp"
+        android:layout_height="205dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center|center_vertical"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/swipe0"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
